RESOLVED FIXED199580
Prevent null dereferencing in SubresourceLoader::init's lambda
https://bugs.webkit.org/show_bug.cgi?id=199580
Summary Prevent null dereferencing in SubresourceLoader::init's lambda
Alex Christensen
Reported 2019-07-08 11:18:32 PDT
Prevent null dereferencing in SubresourceLoader::init's lambda
Attachments
Patch (1.68 KB, patch)
2019-07-08 11:19 PDT, Alex Christensen
no flags
Patch (1.88 KB, patch)
2019-07-08 14:43 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2019-07-08 11:19:21 PDT
Ryosuke Niwa
Comment 2 2019-07-08 14:32:42 PDT
Comment on attachment 373646 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=373646&action=review > Source/WebCore/loader/SubresourceLoader.cpp:168 > + ASSERT_NOT_REACHED(); Should we add a release log for this so that if someone complains that the page load doesn't finish, etc... we can check the sysdiagnose and see that this had happened?
Chris Dumez
Comment 3 2019-07-08 14:41:09 PDT
Comment on attachment 373646 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=373646&action=review >> Source/WebCore/loader/SubresourceLoader.cpp:168 >> + ASSERT_NOT_REACHED(); > > Should we add a release log for this so that if someone complains that the page load doesn't finish, etc... we can check the sysdiagnose and see that this had happened? RELEASE_LOG_ERROR().
Alex Christensen
Comment 4 2019-07-08 14:43:17 PDT
Alex Christensen
Comment 5 2019-07-08 15:59:23 PDT
Radar WebKit Bug Importer
Comment 6 2019-07-08 16:03:23 PDT
Note You need to log in before you can comment on or make changes to this bug.