Prevent null dereferencing in SubresourceLoader::init's lambda https://bugs.webkit.org/show_bug.cgi?id=199580

Reviewed by Ryosuke Niwa.

Crash logs indicate that sometimes m_documentLoader is null.
This is similar to https://bugs.webkit.org/show_bug.cgi?id=187360

* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::init):



Canonical link: https://commits.webkit.org/213483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247231 268f45cc-cd09-0410-ab3c-d52691b4dbfc